--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -99,6 +99,7 @@
                             <mat-option [value]=0>All</mat-option>
                             <mat-option value="Available">Available</mat-option>
                             <mat-option value="Sold">Sold</mat-option>
+                            <mat-option value="Order Sold">Order Sold</mat-option>
                             <mat-option value="Damaged">Damaged</mat-option>
                             <mat-option value="Customer Return">Customer Return</mat-option>
                             <mat-option value="Return To Supplier">Return To Supplier</mat-option>
