--- a/server/views/OrderForm.ejs
+++ b/server/views/OrderForm.ejs
@@ -16,7 +16,8 @@
 
  
 </style>
-<body>
+<% if (data.company.ID != 1){%> 
+<body >
     <section >
         <%- include('./header.ejs', {pageNumber: 1}) %>
         <div style="height: 10px;">
@@ -158,5 +159,146 @@
         </p>
     </section>
 </body>
+<%}%>
+<body>
+    <section >
+        <%- include('./header.ejs', {pageNumber: 1}) %>
+        <div style="height: 10px;">
+            <div <% %> style="border-bottom: 1px solid <%= data.Color %>; width: 38%; position:absolute; margin-top: 1%;"> </div>
+            <div <% %> style="border-bottom: 1px solid <%= data.Color %>; width: 38%; float: right; position: relative; margin-top: 1%;"></div>
+            <span class="headingName" <% %> style="color: <%= data.Color %>;">Order Form</span>
+         </div>
+    </section>
 
+    <section>
+        <div class="CustomerRow">
+          <div class="col1">
+             <ul class="ul1">
+                <li>Order No</li>
+                <li>BillDate</li>
+             </ul>
+             <ul class="ul2">
+                 <li>: <%=data.billMaster.InvoiceNo%></li>
+                 <li>:  </li>
+             </ul>
+          </div>
+          <div class="col2">
+             <ul class="ul1">
+               <li>Name :</li>
+               <li>DeliveryDate</li>
+             </ul>
+             <ul class="ul2">
+                <li>:  <%=data.customer.Name%></li>
+                <li>: </li>
+             </ul>
+          </div>
+        </div>
+    </section>
+
+    <section>
+        <table style="width: 100%; height: 100px;">
+            <thead>
+                <tr>
+                    <th style="border: none;"></th>
+                    <th style="border: none;"></th>
+                    <th style="border: none;"></th>
+                    <th style="border: none;">Right</th>
+                    <th style="border: none;"></th>
+                    <th style="border-left: none;"></th>
+                    <th style="border: none;"></th>
+                    <th style="border: none;"></th>
+                    <th style="border: none;">Left</th>
+                    <th style="border: none;"></th>
+                    <th style="border: none;"></th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th>SPH</th>
+                    <th>CYL</th>
+                    <th>AXIS</th>
+                    <th>VA</th>
+                    <th>ADD</th>
+                    <th>SPH</th>
+                    <th>CYL</th>
+                    <th>AXIS</th>
+                    <th>VA</th>
+                    <th>ADD</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr style="text-align: center;">
+                    <td>D/V</td>
+                    <td> <%=data.Measurement.REDPSPH%></td>
+                    <td> <%=data.Measurement.REDPCYL%></td>
+                    <td> <%=data.Measurement.REDPAxis%></td>
+                    <td> <%=data.Measurement.REDPVA%></td>
+                    <td> <%=data.Measurement.R_Addition%></td>
+                    <td> <%=data.Measurement.LEDPSPH%> </td>
+                    <td> <%=data.Measurement.LEDPCYL%></td>
+                    <td> <%=data.Measurement.LEDPAxis%></td>
+                    <td> <%=data.Measurement.LEDPVA%></td>
+                    <td> <%=data.Measurement.L_Addition%> </td>
+                </tr>
+                <tr style="text-align: center;">
+                    <td>N/V</td>
+                    <td><%=data.Measurement.RENPSPH%></td>
+                    <td><%=data.Measurement.RENPCYL%></td>
+                    <td><%=data.Measurement.RENPAxis%></td>
+                    <td><%=data.Measurement.RENPVA%></td>
+                    <td></td>
+                    <td><%=data.Measurement.LENPSPH%></td>
+                    <td><%=data.Measurement.LENPCYL%></td>
+                    <td><%=data.Measurement.LENPAxis%></td>
+                    <td><%=data.Measurement.LENPVA%></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section>
+        <div class="rowFooter">
+          <div class="col1">
+            <ul class="ul1">
+                <li>Refractive Index :</li>
+                <li>Vertex Distance :</li>
+                <li>Fitting Height :</li>
+            </ul>
+            <ul class="ul2">
+                <li><%=data.Measurement.RefractiveIndex%></li>
+                <li><%=data.Measurement.VertexDistance%></li>
+                <li><%=data.Measurement.FittingHeight%></li>
+            </ul>
+          </div>
+          <div class="col2">
+            <ul class="ul1">
+                <li>PD Right :</li>
+                <li>PD Left :</li>
+            </ul>
+            <ul class="ul2">
+                <li><%=data.Measurement.REPD%></li>
+                <li><%=data.Measurement.LEPD%></li>
+            </ul>
+          </div>
+          <div class="col3">
+            <ul class="ul1">
+                <li>Prism Right :</li>
+                <li>Prism Left :</li>
+            </ul>
+            <ul class="ul2"> 
+                <li><%=data.Measurement.R_Prism%></li>
+                <li><%=data.Measurement.L_Prism%></li>
+            </ul>
+          </div>
+        </div>
+    </section>
+
+    <section class="ProdRow" >
+        <p> 
+            <b >Product Description : </b>
+                 <span class="ProdcutName"> (<%=data.data.ProductTypeName%> / <%=data.data.ProductName%>)  </span>
+        </p>
+    </section>
+
+</body>
 </html>
