--- a/web1/src/app/inventory/order-form/order-form.component.css
+++ b/web1/src/app/inventory/order-form/order-form.component.css
@@ -150,3 +150,34 @@ tr.mat-footer-row {
 .mostly-customized-scrollbar::-webkit-scrollbar-thumb {
     background: rgb(62, 79, 173);
 }
+
+.bgRemove {
+  background: none;
+  border: none;
+}
+
+.pritn_icon {
+  background: #007cff;
+  color: #fff;
+  padding: 3px;
+  border-radius: 20px;
+  font-size: 17px;
+  height: 24px !important;
+  width: 24px !important;
+  cursor: pointer;
+  transition: 0.5s;
+  box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.edit_icon {
+  background: #007cff;
+  color: #fff;
+  padding: 3px;
+  border-radius: 20px;
+  font-size: 17px;
+  height: 24px !important;
+  width: 24px !important;
+  cursor: pointer;
+  transition: 0.5s;
+  box-shadow: 2px 2px 6px #9c9795fa;
+}
