--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3156,6 +3156,205 @@
                                     </div>
                                 </div>
                             </mat-tab>
+
+                            <mat-tab *ngIf="viewSaleProductExpiryReport" label="Order Form ">
+                                <div class="body">
+                                    <form class="p-3 pb-0" #fof="ngForm" >
+                                        <div class="row">
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From</mat-label>
+                                                    <input matInput name="FromDate" type="date"
+                                                        [(ngModel)]="OForm.FromDate" #DOBcontrol
+                                                        />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>To</mat-label>
+                                                    <input matInput type="date" name="ToDate"
+                                                        [(ngModel)]="OForm.ToDate"
+                                                         />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="OForm.ShopID" multiple>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName != 'null' || s.AreaName !== ''">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="OForm.ShopID">
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            
+                                           
+                                        
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Product Status</mat-label>
+                                                    <mat-select name="ProductStatus"
+                                                        [(ngModel)]="OForm.ProductStatus">
+                                                        <mat-option value="All">All</mat-option>
+                                                        <mat-option value="0">Pending</mat-option>
+                                                        <mat-option value="1">Deliverd</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Select Product</mat-label>
+                                                    <mat-select name="FieldType"
+                                                        [(ngModel)]="OForm.ProductCategory"
+                                                        (selectionChange)="getFieldList4()" required #Typecontrol>
+                                                        <mat-option>
+                                                            <ngx-mat-select-search matInput [(ngModel)]="searchValue"
+                                                                (ngModelChange)="searchValue = onChange($event)"
+                                                                [ngModelOptions]="{standalone: true}">
+                                                            </ngx-mat-select-search>
+                                                        </mat-option>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option
+                                                            *ngFor="let prod of prodList4 | prodtypename: searchValue let i = index;"
+                                                            [value]="prod.ID">
+                                                            {{prod.Name | uppercase}}
+                                                        </mat-option>
+                                                    </mat-select>
+                                                    <mat-error>
+                                                        Select Product Type
+                                                    </mat-error>
+                                                </mat-form-field>
+                                            </div>
+                                            <!-- spec start -->
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0"
+                                                *ngFor="let spec of specList4 ; let i = index;">
+                                                <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
+                                                    <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
+                                                        <mat-label>{{spec.FieldName}}</mat-label>
+                                                        <mat-select name="{{spec.FieldName+'0'}}"
+                                                            [(ngModel)]="spec.SelectedValue"
+                                                            (selectionChange)="getFieldSupportData4(i)" editable="true"
+                                                            [required]="spec.Required === 1" #singleSelect>
+                                                            <mat-option>
+                                                                <ngx-mat-select-search matInput
+                                                                    [(ngModel)]="spec.EnteredValue"
+                                                                    (ngModelChange)="spec.EnteredValue = onChange($event)"
+                                                                    [ngModelOptions]="{standalone: true}">
+                                                                </ngx-mat-select-search>
+                                                            </mat-option>
+                                                            <mat-option>
+                                                            </mat-option>
+                                                            <mat-option
+                                                                *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
+                                                                [value]="val.TableValue">
+                                                                {{val.TableValue}}
+                                                            </mat-option>
+                                                        </mat-select>
+                                                        <mat-error>
+                                                            {{spec.FieldName}} is Required
+                                                        </mat-error>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div *ngIf="spec.FieldType === 'Text'" class="d-flex">
+                                                    <mat-form-field class=" mr-0 mb-0">
+                                                        <mat-label>{{spec.FieldName}}</mat-label>
+                                                        <input matInput name="{{spec.FieldName+'2'}}"
+                                                            [(ngModel)]="spec.SelectedValue"
+                                                            [required]="spec.Required === 1"
+                                                            (blur)="getFieldSupportData4(i)">
+                                                        <mat-error>
+                                                            {{spec.FieldName}} is Required
+                                                        </mat-error>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div *ngIf="spec.FieldType === 'Date'" class="d-flex">
+                                                    <mat-form-field class=" mr-0 mb-0">
+                                                        <mat-label>{{spec.FieldName}}</mat-label>
+                                                        <input type="date" matInput name="{{spec.FieldName+'3'}}"
+                                                            [(ngModel)]="spec.SelectedValue" editable="true"
+                                                            [required]="spec.Required === 1">
+                                                        <mat-error>
+                                                            {{spec.FieldName}} is Required
+                                                        </mat-error>
+                                                    </mat-form-field>
+                                                </div>
+                                                <div *ngIf="spec.FieldType === 'boolean'" class="d-flex">
+                                                    <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary"
+                                                        class="example-margin" #Multiplecontrolx
+                                                        [(ngModel)]="spec.SelectedValue">
+                                                        {{spec.FieldName}}</mat-slide-toggle>
+                                                </div>
+                                            </div>
+                                            <div *ngIf="this.OForm.ProductCategory === 'LENS'"
+                                                class="col-xl-2 col-lg-2 col-md-2 col-sm-12 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Option</mat-label>
+                                                    <mat-select name="Option" [(ngModel)]="OForm.Option">
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option value="Full Glass">Full Lens</mat-option>
+                                                        <mat-option value="Half Glass Left">Half Lens Left</mat-option>
+                                                        <mat-option value="Half Glass Right">Half Lens
+                                                            Right</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <!--  spec end -->
+                                            
+                                           
+                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
+                                                <button class="me-3" type="submit" mat-raised-button color="primary">
+                                                    Search
+                                                </button>
+                                                <button type="button" mat-raised-button color="warn"
+                                                  >
+                                                    Reset
+                                                </button>
+
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <!-- Purchase Detailed list -->
+                                    <div class="body p-2">
+                                        <div id="ProductExpiry-content" class="col-sm-12"
+                                            style="overflow: auto; height: 450px;">
+                                            <table class="table table-striped table-hover table-sm table-bordered"
+                                                style="border: 2px solid #fff !important;" id="saleExpiryExcel">
+                                                <thead>
+                                                    <tr class="text-center" style="white-space: normal;">
+                                                        <th>S.No</th>
+                                                        <th>CustomerName </th>
+                                                        <th>CustomerMobileNo</th>
+                                                        <th>InvoiceNo</th>
+                                                        <th>InvoiceShopName</th>
+                                                        <th>OrderRequestShopName</th>
+                                                        <th>ProductTypeName</th>
+                                                        <th>ProductName</th>
+                                                        <th>ProductStatus</th>
+                                                        <th>Quantity</th>
+                                                        <th>SaleQuantity</th>
+                                                    </tr>
+                                                </thead>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </mat-tab>
                         </mat-tab-group>
                     </div>
                 </div>
