--- a/web1/src/app/admin/dashborad.component.html
+++ b/web1/src/app/admin/dashborad.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="company.ID != 241">
+
+
 <section class="content d-md-block d-none" >
     <div class="container-fluid " >
         <div class="row p-4 mt-0 ">
@@ -20,3 +23,197 @@
     </div>
 </section>
 
+</div>
+
+<div *ngIf="company.ID == 241">
+    <section class="content d-md-block d-none" >
+        <div class="container-fluid " >
+            <div class="row p-4 mt-0 ">
+                <div  class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12  pt-2">
+                    <table class="table1 bg-light" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th colspan="4">Today Report</th>
+                            </tr>
+                            <tr>
+                                <th>Sale</th>
+                                <th>AMT REC</th>
+                                <th>DUE AMT</th>
+                                <th>EXPENSES</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                                <td>0</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <div class="row mt-4" style="display: flex; justify-content: space-between;">
+                        <div class="col-xl-5 col-lg-4 col-md-6 col-sm-6 col-12 btnRaut">
+                            <b >Customer</b>
+                        </div>
+                        <div class="col-xl-5 col-lg-4 col-md-6 col-sm-6 col-12 btnRaut">
+                            <b>Billing</b>
+                        </div>
+                        <div class="col-xl-5 col-lg-4 col-md-6 col-sm-6 col-12 btnRaut">
+                            <b >Purchase</b>
+                        </div>
+                        <div class="col-xl-5 col-lg-4 col-md-6 col-sm-6 col-12 btnRaut">
+                            <b>Reminder</b>
+                        </div>
+                        <div class="col-xl-5 col-lg-4 col-md-6 col-sm-6 col-12 btnRaut">
+                            <b >Expenses</b>
+                        </div>
+                      
+                    </div>
+                </div>
+                <div  class="col-xl-7 col-lg-4 col-md-6 col-sm-6 col-12 crds  ms-auto" style="background: #fff;">
+                    <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link " id="ex1-tab-1" data-mdb-toggle="tab"
+                                href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
+                                aria-selected="true">Sale</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="tab" href="#ex1-tabs-3"
+                                role="tab" aria-controls="ex1-tabs-3" aria-selected="false">Collection</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2"
+                                role="tab" aria-controls="ex1-tabs-2" aria-selected="false">Customer Balance</a>
+                        </li>
+                        <!-- <li class="nav-item" role="presentation">
+                            <a class="nav-link" id="ex1-tab-4" data-mdb-toggle="tab" href="#ex1-tabs-4"
+                                role="tab" aria-controls="ex1-tabs-4" aria-selected="false">Supplier Balance</a>
+                        </li> -->
+                    </ul>
+
+                    <div class="tab-content bg-light" id="ex1-content ">
+                        <div class="tab-pane fade " id="ex1-tabs-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                            <table class="table2 bg-light" style="width:100%">
+                                <thead>
+                                  
+                                    <tr>
+                                        <th>SNo.</th>
+                                        <th>InvoiceNo</th>
+                                        <th>CustomerName</th>
+                                        <th>CustomerMob</th>
+                                        <th>BillAmt</th>
+                                        <th>PaidAmt</th>
+                                        <th>DueAmt</th>
+                                       
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
+                            <table class="table2 bg-light" style="width:100%">
+                                <thead>
+                                  
+                                    <tr>
+                                        <th>SNo.</th>
+                                        <th>Cash</th>
+                                        <th>Upi</th>
+                                        <th>Phonepe</th>
+                                        <th>Gpay</th>
+                                       
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                            <table class="table2 bg-light" style="width:100%">
+                                <thead>
+                                  
+                                    <tr>
+                                        <th>SNo.</th>
+                                        <th>CustomerName</th>
+                                        <th>CustomerMob</th>
+                                        <th>InvoiceNo</th>
+                                        <th>InvoiceDate</th>
+                                        <th>TotalAmt</th>
+                                        <th>PaidAmt</th>
+                                        <th>Balance</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane fade" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+                            <table class="table2 bg-light" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>SNo.</th>
+                                        <th>SupplierName</th>
+                                        <th>InvoiceDate</th>
+                                        <th>InvoiceNo</th>
+                                        <th>BillAmt</th>
+                                        <th>PaidAmt</th>
+                                        <th>DueAmt</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                  
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
