--- a/web1/src/app/admin/dashborad.component.css
+++ b/web1/src/app/admin/dashborad.component.css
@@ -13,23 +13,49 @@
 }
 
 .table1 thead tr th, .table1 tbody tr td{
- border: 1px solid;
+  border: 1px solid #b7b7b7;
+  text-align: center !important;
+  font-size: larger;
+  padding: 2%;
+  white-space: nowrap;
+  font-weight: 500;
+}
+
+.tableTfoot  tr th{
+ border: 1px solid red;
  text-align: center !important;
+ font-size: large;
+ padding: 1%;
 }
 
 
 .btnRaut{
   background: #1e2672;
-    color: #fff;
-    text-align: center;
-    padding: 5px;
-    margin: 8px;
-    padding: 10px;
-    margin: 10px;
+  color: #fff;
+  text-align: center;
+  padding: 3%;
+  margin: 10px;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 15px 4px #dddddd73;
+  font-size: large;
+  border-radius: 5px;
+  transition: .5s ease-in-out;
+}
+
+.btnRaut:hover{
+  box-shadow: none;
+  transform: scale(.95);
 }
 
 .table2 thead tr th {
- background-color: #8080804d;
+ background-color: #1e2672fc;
+ font-size: large;
+ padding: 1%;
+ color: #fff;
+}
+.table2 tbody tr td {
+ font-size: large;
+ padding: 1%;
 }
 
 .table2 tbody tr:nth-child(even) {
@@ -41,10 +67,10 @@
   border: solid transparent;
   border-width: 0 0 2px;
   border-radius: 0;
-  text-transform: uppercase;
+  text-transform: none !important;
   line-height: 1;
   font-weight: 500;
-  font-size: 16px !important;
+  font-size: 20px !important;
 
   padding: 17px 29px 16px ;
 }
