--- a/web1/src/app/inventory/order-form/order-form.component.html
+++ b/web1/src/app/inventory/order-form/order-form.component.html
@@ -5,18 +5,22 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Order From</h2>
+                        <h2>Order From {{this.data.ProductStatus}}</h2>
                     </div>
                     <div class="body">
                         <!-- form start -->
                         <form #f="ngForm" autocomplete="off" #f0="ngForm">
                             <div class="row mb-3">
-                                <div class="col-xl-3 col-lg-1 col-md-3 col-3 mx-auto mb-3  mb-sm-0">
+                                <div class="col-xl-4 col-lg-4 col-md-6 col-12 mx-auto mb-3  mb-sm-0">
                                     <button type="button" mat-raised-button color="wram"
                                         (click)="getOrderData('Order Request')">
                                         Order Request
                                     </button>
 
+                                    <button class="ms-3" type="button" mat-raised-button color="primary"
+                                        (click)="getOrderData('Order Transfer')">
+                                        Order Transfer
+                                    </button>
                                     <button class="ms-3" type="button" mat-raised-button color="primary"
                                         (click)="getOrderData('Order Complete')">
                                         Order Complete
@@ -82,6 +86,11 @@
                                                         *ngIf="data.OrderRequestShopID == this.selectedShop[0] && data.ProductStatus == 'Order Request'"
                                                         (click)="openModalS(content00,data)">
                                                         Process
+                                                    </button>
+                                                    <button type="button" mat-raised-button color="primary"
+                                                        *ngIf="this.selectedShop[0] != data.OrderRequestShopID && data.ProductStatus == 'Order Transfer'"
+                                                        (click)="ReadyForDelivery(data)">
+                                                        Complete
                                                     </button>
                                                     <button class="bgRemove p-0 ms-1" type="button">
                                                         <mat-icon class="pritn_icon" title="Order Form" (click)="OrderPrint(data)">print</mat-icon>
